# ergibus

./: .gitignore  Cargo.toml  README.md  test_lock_file
TEST/config/archives/: dummy
content/: Cargo.toml
content/src/: lib.rs
dychatat/: .gitignore  Cargo.toml
dychatat/src/: error.rs  lib.rs  main.rs  sub_cmds.rs
dychatat_lib/: Cargo.toml  README.md
dychatat_lib/src/: config.rs  content.rs  error.rs  lib.rs
ergibus/: Cargo.toml
ergibus/src/: archive_sub_cmds.rs  archives.rs  cli.rs  main.rs  mod.rs  repositories.rs  repository_sub_cmds.rs  snapshot_sub_cmds.rs  snapshots.rs  subcmd_archive.rs  subcmd_back_up.rs  subcmd_delete_snapshot.rs  subcmd_delete_snapshot_file.rs  subcmd_extract.rs  subcmd_list_archives.rs  subcmd_list_snapshots.rs  subcmd_new_archive.rs  subcmd_new_repo.rs  subcmd_repo.rs  subcmd_snapshot.rs
ergibus_clap/: Cargo.toml
ergibus_clap/src/: main.rs  subcmd_archive.rs  subcmd_delete_snapshot.rs  subcmd_extract.rs  subcmd_list_snapshots.rs  subcmd_new_archive.rs  subcmd_repo.rs  subcmd_snapshot.rs
ergibus_gtk/: Cargo.toml
ergibus_gtk/src/: g_archive.rs  g_snapshot.rs  g_snapshots.rs  icons.rs  main.rs
ergibus_gtk/src/icons/: to_parent.xpm  up_dir.rs
ergibus_lib/: Cargo.toml  README.md
ergibus_lib/src/: archive.rs  attributes.rs  config.rs  content.rs  fs_objects.rs  lib.rs  path_buf_ext.rs  path_ext.rs  report.rs  snapshot.rs  snapshot_ng.rs
ergibus_lib/src/cli/: main.rs  subcmd_list_archives.rs
ergibus_lib/src/gui/: g_archive.rs  g_snapshot.rs  main.rs
ergibus_orbtk/: Cargo.toml
ergibus_orbtk/src/: main.rs  orbtk_archive.rs  orbtk_snapshots.rs
ordered_map/: Cargo.toml
ordered_map/src/: lib.rs
path_ext/: Cargo.toml
path_ext/src/: lib.rs
path_utilities/src/: lib.rs
pathux/: Cargo.toml
pw_gix/src/gtkx/: dialog_user.rs
pw_gtk_ext/: Cargo.toml
pw_gtk_ext/src/: gtkx.rs  lib.rs  sav_state.rs  wrapper.rs
pw_gtk_ext/src/gtkx/: buffered_list_store.rs  check_button.rs  combo_box_text.rs  dialog.rs  dialog_user.rs  entry.rs  list.rs  list_store.rs  menu.rs  notebook.rs  radio_button.rs  tree_store.rs  tree_view.rs  value.rs
snapshot/: Cargo.toml
snapshot/src/: lib.rs
src/: archive.rs  attributes.rs  config.rs  content.rs  eerror.rs  error.rs  lib.rs  main.rs  path_buf_ext.rs  pathux.rs  report.rs  snapshot.rs
src/cli/: main.rs  mod.rs  subcmd_archive.rs  subcmd_back_up.rs  subcmd_delete.rs  subcmd_delete_snapshot.rs  subcmd_delete_snapshot_file.rs  subcmd_extract.rs  subcmd_list_archives.rs  subcmd_list_snapshots.rs  subcmd_lss.rs  subcmd_new_archive.rs  subcmd_new_repo.rs  subcmd_snapshot.rs
src/gtkx/: combo_box_text.rs  list_store.rs  mod.rs
src/gui/: g_archive.rs  g_snapshot.rs  main.rs  mod.rs
