[package]
name = "ergibus"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]

[dependencies]
argparse = "*"
chrono = "0.4"
crypto-hash = "0.3.0"
globset = "0.1"
hex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7.1"
snap = "0.2"
walkdir = "1.0.7"

[workspace]
