[package]
name = "ergibus"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]

[[bin]]
name = "ergibus"
path = "src/cli/main.rs"

[[bin]]
name = "gergibus"
path = "src/gui/main.rs"

[dependencies]
chrono = "0.4"
clap = "~2.26.0"
#{version = "~2.19.0", features = ["yaml"]}
crypto-hash = "0.3.0"
fs2 = "0.4.2"
globset = "0.1"
hex = "0.2"
hostname = "^0.1"
lazy_static = "0.2.8"
libc = "0.2"
# TODO: change pw_gix dependency when it goes public
#pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_gix = { path = "/home/peter/SRC/GITHUB/rs_pw_gix.git" }
#pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
pw_pathux = { path = "/home/peter/SRC/GITHUB/rs_pw_pathux.git" }
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7.1"
snap = "0.2"
tempdir = "0.3"
users = "0.5.0"
walkdir = "1.0.7"

gdk = "0.10.0"
gio = "0.6.0"
gtk = "0.6.0"

[features]
default = ["gtk/v3_18"]

[workspace]
