[package]
name = "dychatat"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

[dependencies]
crypto-hash = "0.3.3"
fs2 = "0.4.3"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
snap = "0.2.5"
tempdir = "0.3.7"
thiserror = "1.0.26"
