[package]
name = "ergibus"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
structopt = "0.3.2"

pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }

ergibus_lib = { path = "../ergibus_lib" }