[package]
name = "ergibus_gtk"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gdk = "0.12.0"
gio = "0.8.0"
glib = "0.9.0"
gtk = "0.8.0"

crypto-hash = "0.3.0"

pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }

ergibus_lib = { path = "../ergibus_lib" }