[package]
name = "ergibus_gtk"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.0"
log = "0.4.14"
num-format = "0.4.4"

#pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
#pw_gtk_ext = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
#pw_gtk_ext = { path = "../../../CRATES/rs_pw_gix.git/pw_gtk_ext" }
pw_gtk_ext = { path = "../pw_gtk_ext" }
recollections = { git = "https://github.com/pwil3058/recollections.git" }
ergibus_lib = { path = "../ergibus_lib" }
