[package]
name = "ergibus_lib"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "~2.33.0"
crypto-hash = "0.3.0"
fs2 = "0.4.2"
globset = "0.1"
hex = "0.2"
hostname = "^0.1"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.8"
structopt = "0.3.2"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7.1"
snap = "0.2"
tempdir = "0.3"
users = "0.5.0"
walkdir = "1.0.7"

pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux.git" }
dychatat = { git = "https://github.com/pwil3058/dychatat.git" }
